--- a/exam.html
+++ b/exam.html
@@ -17,13 +17,6 @@
     <script src="material/css&js/mdui.js"></script>
     <script scr="material/css&js/JQuery-3.4.1.min.js"></script>
     <script>
-        function validateForm() {
-            var x = document.forms["id"]["name"].value;
-            if (x == "") {
-                alert("必须填写姓名");
-                return false;
-            }
-        }
     </script>
 </head>
 
@@ -33,7 +26,7 @@
     <div class="mdui-appbar mdui-appbar-scroll-hide">
 
         <div class="mdui-toolbar mdui-color-indigo">
-            <a class="mdui-typo-title">极客社和云平台入社考核</a>
+            <a class="mdui-typo-title">极客社和云平台入社考核test</a>
             <div class="mdui-toolbar-spacer"></div>
         </div>
 
@@ -50,33 +43,29 @@
 
         <div class="mdui-row">
             <div class="mdui-col-xs-6 mdui-col-offset-xs-3">
-                <form name="myForm" action="/demo/action_page.php" onsubmit="return validateForm()" method="post">
-                    <input type="submit" value="提交">
+                <div class="mdui-card " style="background: silver">
 
-                    <div class="mdui-card " style="background: silver">
-
-                        <div class="mdui-card-primary">
-                            <div class="mdui-card-primary-title">个人信息</div>
-                        </div>
-
-                        <div class="mdui-card-actions">
-
-                            <div class="mdui-textfield mdui-textfield-floating-label">
-                                <label class="mdui-textfield-label">姓名</label>
-                                <input class="mdui-textfield-input" type="name" />
-                            </div>
-
-                            <div class="mdui-textfield mdui-textfield-floating-label">
-                                <label class="mdui-textfield-label">学号</label>
-                                <input class="mdui-textfield-input" type="id" />
-                            </div>
-
-                            <div style="height: 20px"></div>
-                            <div style=" text-align: center;"><a href="exam.html" class=" mdui-btn mdui-color-pink ">开始考试</a></div>
-
-                        </div>
+                    <div class="mdui-card-primary">
+                        <div class="mdui-card-primary-title">个人信息</div>
                     </div>
-                </form>
+
+                    <div class="mdui-card-actions">
+
+                        <div class="mdui-textfield mdui-textfield-floating-label">
+                            <label class="mdui-textfield-label">姓名</label>
+                            <input class="mdui-textfield-input" type="name" />
+                        </div>
+
+                        <div class="mdui-textfield mdui-textfield-floating-label">
+                            <label class="mdui-textfield-label">学号</label>
+                            <input class="mdui-textfield-input" type="id" />
+                        </div>
+
+                        <div style="height: 20px"></div>
+                        <div style=" text-align: center;"><a href="exam.html" class=" mdui-btn mdui-color-pink ">开始考试</a></div>
+
+                    </div>
+                </div>
             </div>
         </div>
 
