--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
 </head>
 
-<body style="background-color:silver;padding-bottom: 0%" class="mdui-theme-primary-deep-indigo mdui-theme-accent-deep-purple ">
+<body style="background-color:silver;padding-bottom: 0%" class="mdui-theme-primary-deep-indigo mdui-theme-accent-deep-purple mdui-bottom-nav-fixed ">
 
     <!--—————————— 导航栏 ——————————-->
     <div class="mdui-appbar mdui-appbar-scroll-hide">
@@ -36,67 +36,88 @@
 
 
     <!--—————————— 主部分 ——————————-->
-    <div id="index" style="background-color: whitesmoke;height:720px;" class="mdui-container  mdui-shadow-12 ">
-        <div style="height:90px;width:auto"></div>
 
+    <div id="index" style="background-color: whitesmoke;height:100%;" class="mdui-container mdui-shadow-12 ">
 
+        <div style="height:80px;width:auto"></div>
 
-        <div class="mdui-row">
-            <div class="mdui-col-xs-6 mdui-col-offset-xs-3">
-                <form name="myForm" action="/demo/action_page.php" onsubmit="return validateForm()" method="post">
-                    <input type="submit" value="提交">
+        <form>
 
-                    <div class="mdui-card " style="background: silver">
+            <div class="mdui-row">
 
-                        <div class="mdui-card-primary">
-                            <div class="mdui-card-primary-title">个人信息</div>
-                        </div>
+                <div class=" mdui-col-xs-6 mdui-col-offset-xs-3">
+                    <div class="mdui-typo-display-3 mdui-text-center">极客社&云平台入社考核</div>
+                    <div class="mdui-typo-headline-opacity mdui-text-center">注意事项：本卷满分100分，考试时长60分钟</div>
+                    <div style="width: auto;height:25px"></div>
+                </div>
 
-                        <div class="mdui-card-actions">
+                <div class="mdui-col-xs-4 mdui-col-offset-xs-1">
 
-                            <div class="mdui-textfield mdui-textfield-floating-label">
-                                <label class="mdui-textfield-label">姓名</label>
-                                <input class="mdui-textfield-input" type="name" />
-                            </div>
-
-                            <div class="mdui-textfield mdui-textfield-floating-label">
-                                <label class="mdui-textfield-label">学号</label>
-                                <input class="mdui-textfield-input" type="id" />
-                            </div>
-
-                            <div style="height: 20px"></div>
-                            <div style=" text-align: center;"><a href="exam.html" class=" mdui-btn mdui-color-pink ">开始考试</a></div>
-
-                        </div>
+                    <div class="mdui-textfield mdui-textfield-floating-label">
+                        <label class="mdui-textfield-label">姓名</label>
+                        <input class="mdui-textfield-input" type="name" />
                     </div>
-                </form>
-            </div>
-        </div>
 
-        <div style="height:15px;width: auto"></div>
+                    <div class="mdui-textfield mdui-textfield-floating-label">
+                        <label class="mdui-textfield-label">学号</label>
+                        <input class="mdui-textfield-input" type="id" />
+                    </div>
+
+                    <div style="width: auto;height:25px"></div>
+
+                </div>
+
+                <div class="mdui-col-xs-11 mdui-col-offset-xs-1">
+                    <div class="mdui-typo-display-1">一、单项选择题（本大题共30小题，每小题2分）</div>
+                    <div class="mdui-typo-headline">1、以下哪个不是计算机硬件的组成部分？</div>
+                    <ul class="mdui-list">
+
+                        <li class="mdui-list-item">
+                            <label class="mdui-radio">
+                                <input type="radio" name="t1" value="A"/>
+                                <i class="mdui-radio-icon"></i>A、运算器
+                            </label>
+                        </li>
+
+                        <li class="mdui-list-item">
+                            <label class="mdui-radio">
+                                <input type="radio" name="t1" value="B"/>
+                                <i class="mdui-radio-icon"></i>B、控制器
+                            </label>
+                        </li>
+
+                        <li class="mdui-list-item">
+                            <label class="mdui-radio">
+                                <input type="radio" name="t1" value="C"/>
+                                <i class="mdui-radio-icon"></i>C、存储器
+                            </label>
+                        </li>
+
+                        <li class="mdui-list-item">
+                            <label class="mdui-radio">
+                                <input type="radio" name="t1" value="D"/>
+                                <i class="mdui-radio-icon"></i>D、显示器
+                            </label>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+        </form>
+        </div>
     </div>
 
-
-
-    <div id="examination" style="background-color: whitesmoke;height:1080px;" class="mdui-container  mdui-shadow-12 "></div>
     <!--—————————— 主部分 ——————————-->
 
 
 
     <!--—————————— 页底 ——————————-->
-    <div class=" mdui-contrain-fuild mdui-shadow-12  " style="background-color: grey; text-align: center;
-                                                     margin: 0 auto;height:auto; padding: 20px 15% ;
-                                                     bottom: 0px;">
 
-        <ul class=" mdui-list">
-
-            <a mdui-dialog="{target: '#about'}" class=" ">
-                <i class="mdui-menu-item-icon mdui-icon material-icons">info</i>关于
-            </a>
-
-        </ul>
-
+    <div class="mdui-bottom-nav mdui-shadow-12" style="background-color: rgb(201, 201, 201); text-align: center;height: 24px;">
+        <div class=" mdui-typo-subheading-opacity">Copyright (c) 2019 DEZALER</div>
     </div>
+
     <!--—————————— 页底 ——————————-->
 
 
@@ -112,6 +133,7 @@
             <button class="mdui-btn mdui-ripple " mdui-dialog-close>close</button>
         </div>
     </div>
+
     <!--—————————— 提示框 ——————————-->
 </body>
 
