--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             var time = select.options[index].value;
 
             mdui.dialog({
-                title: '请以下内容复制到新建的' + idn + '.txt文件，并用电子教室提交。',
+                title: '请将以下内容复制到新建的' + idn + '.txt文件，并用电子教室提交。',
                 content: anwser + '</br>' + wz1 + '</br>' + wz2 + '</br>' + wz3 + '</br>' + time,
             });
             document.forms[0].target = "rfFrame"
@@ -154,7 +154,7 @@
                     <div class="mdui-typo-display-1 ">一、单项选择题（本大题共30小题，每小题2分，共60分）</div>
 
                     <div style="width: auto;height:25px "></div>
-                    <div class="mdui-typo-headline ">1、吉吉国王的笔记本最近总是出问题，于是他想装一台台式机，下列吉吉国王所购买的设备中，哪一个属计算机硬件的组成部分？</div>
+                    <div class="mdui-typo-headline ">1、吉吉国王的笔记本最近总是出问题，于是他想装一台台式机，下列吉吉国王所购买的设备中，哪一个不属于计算机硬件的组成部分？</div>
                     <ul class="mdui-list ">
 
                         <li class="mdui-list-item">
@@ -367,6 +367,7 @@ using namespace std;
 int main()
 {
     int a=01001;
+    cout&lt;&lt;a&lt;&lt;endl;
     return 0;
 }</pre>
                     </div>
@@ -598,7 +599,7 @@ var a=new Date().getMonth();</pre>
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz13" value="C">
-                                <i class="mdui-radio-icon"></i>C、`s := arr[startIndex:endIndex]`将arr中从下标startIndex到endIndex-1下的元素创建为一个新的切片。
+                                <i class="mdui-radio-icon"></i>C、<code> s := arr[startIndex:endIndex] </code>将arr中从下标startIndex到endIndex-1下的元素创建为一个新的切片。
                             </label>
                         </li>
 
@@ -618,28 +619,28 @@ var a=new Date().getMonth();</pre>
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz14" value="A">
-                                <i class="mdui-radio-icon"></i>A、`ADD AX，[SI][BX]`
+                                <i class="mdui-radio-icon"></i>A、<code> ADD AX，[SI][BX] </code>
                             </label>
                         </li>
 
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz14" value="B">
-                                <i class="mdui-radio-icon"></i>B、`MOV AX，[BX+SI]`
+                                <i class="mdui-radio-icon"></i>B、<code> MOV AX，[BX+SI] </code>
                             </label>
                         </li>
 
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz14" value="C">
-                                <i class="mdui-radio-icon"></i>C、`AND AX，[BX+SI]`
+                                <i class="mdui-radio-icon"></i>C、<code> AND AX，[BX+SI] </code>
                             </label>
                         </li>
 
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz14" value="D">
-                                <i class="mdui-radio-icon"></i>D、`LEA AX，[BX][SI]`
+                                <i class="mdui-radio-icon"></i>D、<code> LEA AX，[BX][SI] </code>
                             </label>
                         </li>
 
@@ -856,28 +857,28 @@ var a=new Date().getMonth();</pre>
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz21" value="A">
-                                <i class="mdui-radio-icon"></i>A、`DELETE FROM geek WHERE姓名＝‘吉吉国王’`
+                                <i class="mdui-radio-icon"></i>A、<code>DELETE FROM geek WHERE姓名＝‘吉吉国王’</code>
                             </label>
                         </li>
 
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz21" value="B">
-                                <i class="mdui-radio-icon"></i>B、`DELETE姓名＝‘吉吉国王’`
+                                <i class="mdui-radio-icon"></i>B、<code>DELETE姓名＝‘吉吉国王’</code>
                             </label>
                         </li>
 
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz21" value="C">
-                                <i class="mdui-radio-icon"></i>C、`DROP 姓名＝‘吉吉国王’`
+                                <i class="mdui-radio-icon"></i>C、<code>DROP 姓名＝‘吉吉国王’</code>
                             </label>
                         </li>
 
                         <li class="mdui-list-item">
                             <label class="mdui-radio">
                                 <input type="radio" name="xz21" value="D">
-                                <i class="mdui-radio-icon"></i>D、`DROP FROM geek WHERE 姓名＝‘吉吉国王’`
+                                <i class="mdui-radio-icon"></i>D、<code>DROP FROM geek WHERE 姓名＝‘吉吉国王’</code>
                             </label>
                         </li>
 
@@ -1053,7 +1054,7 @@ var a=new Date().getMonth();</pre>
                     </ul>
 
                     <div style="width: auto;height:25px "></div>
-                    <div class="mdui-typo-headline ">27、在使用电脑是，电脑的访问控制根据应用环境不同，可分为三种，但其中不包括什么？</div>
+                    <div class="mdui-typo-headline ">27、在使用电脑时，电脑的访问控制根据应用环境不同，可分为三种，但其中不包括什么？</div>
                     <ul class="mdui-list ">
 
                         <li class="mdui-list-item">
@@ -1241,7 +1242,7 @@ var a=new Date().getMonth();</pre>
 
                         <div class="mdui-typo">
                             <blockquote>
-                                <p>因为考虑到大家用的语言有所不同，这道题请直接复制源代码到‘语言’+‘考号’+‘.txt’的文件，然后用电子教室提交。</p>
+                                <p>因为考虑到大家用的语言有所不同，这道题请大家直接复制源代码到‘语言’+‘考号’+‘.txt’的文件，然后用电子教室提交。</p>
                                 <footer>感谢大家参加本次考核。(｀・ω・´)</footer>
                             </blockquote>
                         </div>
@@ -1250,7 +1251,7 @@ var a=new Date().getMonth();</pre>
                     <iframe id="rfFrame" name="rfFrame" src="about:blank" style="display:none;"></iframe>
         </form>
         <div style="width: auto;height:25px "></div>
-        <button id="tj" class=" mdui-center mdui-btn mdui-color-pink" onclick="check()">提交</button>
+        <button id="tj" class=" mdui-center mdui-btn mdui-color-pink" onclick="check()" mdui-tooltip="{content: '恭喜你犹豫了7秒发现了彩蛋！快提交吧！', delay: 7000}">提交</button>
         <div style="width: auto;height:54px "></div>
         </div>
 
@@ -1274,18 +1275,6 @@ var a=new Date().getMonth();</pre>
 
         <div class="mdui-dialog " id="about ">
             <div class="mdui-dialog-title ">Copyright (c) 2019 江苏省南通中学极客社</div>
-            <div class="mdui-dialog-content ">制作人员：
-                <a href="https://github.com/EG01STAL " class="mdui-btn " target="_blank "><del>@熬夜爆肝的LMJ</del></a>
-            </div>
-            <div class="mdui-dialog-actions ">
-                <button class="mdui-btn mdui-ripple " mdui-dialog-close>close</button>
-            </div>
-        </div>
-
-
-
-        <div class="mdui-dialog " id="result">
-            <div class="mdui-dialog-title" id="rechosen"></div>
             <div class="mdui-dialog-content ">制作人员：
                 <a href="https://github.com/EG01STAL " class="mdui-btn " target="_blank "><del>@熬夜爆肝的LMJ</del></a>
             </div>
